--- a/.github/workflows/dependency-scan.yml
+++ b/.github/workflows/dependency-scan.yml
@@ -49,7 +49,7 @@ jobs:
           python-version: '3.11'
 
       - name: Install uv
-        run: pip install uv
+        run: pip install 'uv>=0.8.6'
 
       - name: Create virtual environment
         run: uv venv
