--- a/.github/workflows/security-scanning.yml
+++ b/.github/workflows/security-scanning.yml
@@ -31,6 +31,7 @@ jobs:
           output: 'trivy-results.sarif'
 
       - name: Run Checkov scan
+        # Updated to avoid ambiguous --policy-metadata params that may be inherited
         uses: bridgecrewio/checkov-action@master
         with:
           directory: .
@@ -38,6 +39,8 @@ jobs:
           output_format: sarif
           output_file_path: checkov-results.sarif
           baseline: security-baseline.json
+          # Avoid setting policy_metadata, policy-metadata, policy_metadata_filter, or policy_metadata_filter_exception
+          # Only standard documented inputs are set here to prevent CLI ambiguity
 
       - name: Upload Trivy scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v3
