--- a/src/integrations/react/package.json
+++ b/src/integrations/react/package.json
@@ -71,6 +71,6 @@
     "test": "astro-scripts test \"test/**/*.test.js\""
   },
   "overrides": {
-    "esbuild": "0.25.0"
+    "esbuild": "^0.25.9"
   }
 }
